package mz.gov.mogovolas.expedientes.entity;
import jakarta.persistence.*; import java.time.*;
@Entity @Table(name="anexos") public class Anexo { @Id @GeneratedValue(strategy=GenerationType.IDENTITY) Long id; @ManyToOne(optional=false) Expediente expediente; @Column(nullable=false) String nomeOriginal; @Column(nullable=false,unique=true) String nomeArmazenado; String contentType; long tamanho; @ManyToOne(optional=false) Utilizador enviadoPor; LocalDateTime dataUpload; public Long getId(){return id;} public Expediente getExpediente(){return expediente;} public String getNomeOriginal(){return nomeOriginal;} public String getNomeArmazenado(){return nomeArmazenado;} public String getContentType(){return contentType;} public long getTamanho(){return tamanho;} public Utilizador getEnviadoPor(){return enviadoPor;} public LocalDateTime getDataUpload(){return dataUpload;} public void setExpediente(Expediente x){expediente=x;} public void setNomeOriginal(String x){nomeOriginal=x;} public void setNomeArmazenado(String x){nomeArmazenado=x;} public void setContentType(String x){contentType=x;} public void setTamanho(long x){tamanho=x;} public void setEnviadoPor(Utilizador x){enviadoPor=x;} public void setDataUpload(LocalDateTime x){dataUpload=x;} }
