package mz.gov.mogovolas.expedientes.entity;
import jakarta.persistence.*; import java.time.*;
@Entity @Table(name="auditorias") public class Auditoria { @Id @GeneratedValue(strategy=GenerationType.IDENTITY) Long id; @ManyToOne Utilizador utilizador; @Column(nullable=false) String acao; String entidade; Long entidadeId; @Column(nullable=false) LocalDateTime dataHora; String enderecoIp; @Column(length=4000) String detalhes; public Long getId(){return id;} public Utilizador getUtilizador(){return utilizador;} public String getAcao(){return acao;} public String getEntidade(){return entidade;} public Long getEntidadeId(){return entidadeId;} public LocalDateTime getDataHora(){return dataHora;} public String getEnderecoIp(){return enderecoIp;} public String getDetalhes(){return detalhes;} public void setUtilizador(Utilizador x){utilizador=x;} public void setAcao(String x){acao=x;} public void setEntidade(String x){entidade=x;} public void setEntidadeId(Long x){entidadeId=x;} public void setDataHora(LocalDateTime x){dataHora=x;} public void setEnderecoIp(String x){enderecoIp=x;} public void setDetalhes(String x){detalhes=x;} }
