package mz.gov.mogovolas.expedientes.entity;
import jakarta.persistence.*; import java.time.*;
@Entity @Table(name="despachos") public class Despacho { @Id @GeneratedValue(strategy=GenerationType.IDENTITY) Long id; @ManyToOne(optional=false) Expediente expediente; @ManyToOne(optional=false) Utilizador utilizador; @Column(nullable=false,length=5000) String texto; @Column(nullable=false) LocalDateTime dataDespacho; public Long getId(){return id;} public Expediente getExpediente(){return expediente;} public Utilizador getUtilizador(){return utilizador;} public String getTexto(){return texto;} public LocalDateTime getDataDespacho(){return dataDespacho;} public void setExpediente(Expediente x){expediente=x;} public void setUtilizador(Utilizador x){utilizador=x;} public void setTexto(String x){texto=x;} public void setDataDespacho(LocalDateTime x){dataDespacho=x;} }
