package mz.gov.mogovolas.expedientes.entity;
import com.fasterxml.jackson.annotation.JsonIgnore; import jakarta.persistence.*; import java.time.*; import java.util.*;
@Entity @Table(name="expedientes")
public class Expediente { @Id @GeneratedValue(strategy=GenerationType.IDENTITY) Long id; @Column(nullable=false,unique=true) String numero; String numeroDocumento; @Column(nullable=false) String assunto; String remetente; LocalDate dataDocumento; @Column(nullable=false) LocalDateTime dataEntrada; @Enumerated(EnumType.STRING) Prioridade prioridade=Prioridade.NORMAL; @Enumerated(EnumType.STRING) Confidencialidade confidencialidade=Confidencialidade.INTERNO; @Enumerated(EnumType.STRING) EstadoExpediente estado=EstadoExpediente.REGISTADO; @Column(length=2000) String observacao; @ManyToOne(optional=false) Utilizador criadoPor; @ManyToOne Sector sectorActual; @JsonIgnore @OneToMany(mappedBy="expediente",cascade=CascadeType.ALL) List<Tramitacao> tramitacoes=new ArrayList<>(); @JsonIgnore @OneToMany(mappedBy="expediente",cascade=CascadeType.ALL) List<Despacho> despachos=new ArrayList<>(); @JsonIgnore @OneToMany(mappedBy="expediente",cascade=CascadeType.ALL) List<Anexo> anexos=new ArrayList<>(); public enum Prioridade{NORMAL,URGENTE,MUITO_URGENTE} public enum Confidencialidade{INTERNO,RESERVADO,CONFIDENCIAL} public enum EstadoExpediente{REGISTADO,RECEBIDO,EM_TRAMITACAO,EM_ANALISE,DEVOLVIDO,DESPACHADO,CONCLUIDO,ARQUIVADO,CANCELADO} public Long getId(){return id;} public String getNumero(){return numero;} public String getNumeroDocumento(){return numeroDocumento;} public String getAssunto(){return assunto;} public String getRemetente(){return remetente;} public LocalDate getDataDocumento(){return dataDocumento;} public LocalDateTime getDataEntrada(){return dataEntrada;} public Prioridade getPrioridade(){return prioridade;} public Confidencialidade getConfidencialidade(){return confidencialidade;} public EstadoExpediente getEstado(){return estado;} public String getObservacao(){return observacao;} public Utilizador getCriadoPor(){return criadoPor;} public Sector getSectorActual(){return sectorActual;} public List<Tramitacao> getTramitacoes(){return tramitacoes;} public List<Despacho> getDespachos(){return despachos;} public List<Anexo> getAnexos(){return anexos;} public void setNumero(String x){numero=x;} public void setNumeroDocumento(String x){numeroDocumento=x;} public void setAssunto(String x){assunto=x;} public void setRemetente(String x){remetente=x;} public void setDataDocumento(LocalDate x){dataDocumento=x;} public void setDataEntrada(LocalDateTime x){dataEntrada=x;} public void setPrioridade(Prioridade x){prioridade=x;} public void setConfidencialidade(Confidencialidade x){confidencialidade=x;} public void setEstado(EstadoExpediente x){estado=x;} public void setObservacao(String x){observacao=x;} public void setCriadoPor(Utilizador x){criadoPor=x;} public void setSectorActual(Sector x){sectorActual=x;} }
