package mz.gov.mogovolas.expedientes.entity;
import com.fasterxml.jackson.annotation.JsonIgnore; import jakarta.persistence.*; import java.util.*;
@Entity @Table(name="papeis")
public class Papel { @Id @GeneratedValue(strategy=GenerationType.IDENTITY) Long id; @Column(nullable=false,unique=true) String nome; String descricao; @JsonIgnore @ManyToMany(fetch=FetchType.EAGER) @JoinTable(name="papel_permissao",joinColumns=@JoinColumn(name="papel_id"),inverseJoinColumns=@JoinColumn(name="permissao_id")) Set<Permissao> permissoes=new HashSet<>(); public Papel(){} public Papel(String n,String d){nome=n;descricao=d;} public Long getId(){return id;} public String getNome(){return nome;} public String getDescricao(){return descricao;} public Set<Permissao> getPermissoes(){return permissoes;} public void setNome(String x){nome=x;} public void setDescricao(String x){descricao=x;} }
