package mz.gov.mogovolas.expedientes.entity;
import jakarta.persistence.*; import java.time.*;
@Entity @Table(name="tramitacoes") public class Tramitacao { @Id @GeneratedValue(strategy=GenerationType.IDENTITY) Long id; @ManyToOne(optional=false) Expediente expediente; @ManyToOne Sector sectorOrigem; @ManyToOne(optional=false) Sector sectorDestino; @ManyToOne(optional=false) Utilizador enviadoPor; @ManyToOne Utilizador recebidoPor; LocalDateTime dataEnvio; LocalDateTime dataRecepcao; @Column(length=2000) String observacao; @Enumerated(EnumType.STRING) EstadoTramitacao estado=EstadoTramitacao.ENVIADO; public enum EstadoTramitacao{ENVIADO,RECEBIDO,DEVOLVIDO} public Long getId(){return id;} public Expediente getExpediente(){return expediente;} public Sector getSectorOrigem(){return sectorOrigem;} public Sector getSectorDestino(){return sectorDestino;} public Utilizador getEnviadoPor(){return enviadoPor;} public Utilizador getRecebidoPor(){return recebidoPor;} public LocalDateTime getDataEnvio(){return dataEnvio;} public LocalDateTime getDataRecepcao(){return dataRecepcao;} public String getObservacao(){return observacao;} public EstadoTramitacao getEstado(){return estado;} public void setExpediente(Expediente x){expediente=x;} public void setSectorOrigem(Sector x){sectorOrigem=x;} public void setSectorDestino(Sector x){sectorDestino=x;} public void setEnviadoPor(Utilizador x){enviadoPor=x;} public void setRecebidoPor(Utilizador x){recebidoPor=x;} public void setDataEnvio(LocalDateTime x){dataEnvio=x;} public void setDataRecepcao(LocalDateTime x){dataRecepcao=x;} public void setObservacao(String x){observacao=x;} public void setEstado(EstadoTramitacao x){estado=x;} }
