package mz.gov.mogovolas.expedientes.entity;
import com.fasterxml.jackson.annotation.JsonIgnore; import jakarta.persistence.*; import java.util.*;
@Entity @Table(name="utilizadores")
public class Utilizador { @Id @GeneratedValue(strategy=GenerationType.IDENTITY) Long id; @Column(nullable=false) String nome; @Column(nullable=false,unique=true) String username; @Column(nullable=false,unique=true) String email; @JsonIgnore @Column(name="password_hash",nullable=false) String password; boolean activo=true; @Column(nullable=false) boolean bloqueado=false; @ManyToOne(optional=false) Sector sector; @JsonIgnore @ManyToMany(fetch=FetchType.EAGER) @JoinTable(name="utilizador_papel",joinColumns=@JoinColumn(name="utilizador_id"),inverseJoinColumns=@JoinColumn(name="papel_id")) Set<Papel> papeis=new HashSet<>(); public Long getId(){return id;} public String getNome(){return nome;} public String getUsername(){return username;} public String getEmail(){return email;} public String getPassword(){return password;} public boolean isActivo(){return activo;} public boolean isBloqueado(){return bloqueado;} public Sector getSector(){return sector;} public Set<Papel> getPapeis(){return papeis;} public void setNome(String x){nome=x;} public void setUsername(String x){username=x;} public void setEmail(String x){email=x;} public void setPassword(String x){password=x;} public void setActivo(boolean x){activo=x;} public void setBloqueado(boolean x){bloqueado=x;} public void setSector(Sector x){sector=x;} }
